namespace CafeRMS.Api.Features;

public class PriceGroup
{
    public int Id { get; private init; }
    public string Name { get; init; } = "";
}
